# django-wishlist

./: .gitignore  README.md  pre-commit  pyproject.toml  requirements.txt
django_wishlist/: admin.py  asgi.py  models.py  settings.py  urls.py  utils.py  wsgi.py
django_wishlist/django_wishlist/: settings.py
django_wishlist/migrations/: 0001_initial.py  0002_auto_20221101_1336.py  0003_auto_20221103_1747.py  0004_auto_20221104_0933.py  0005_auto_20221107_1455.py  0006_wish_visible.py  0007_auto_20221222_1520.py
django_wishlist/static/: bulma.css  colcade.js  main.css
django_wishlist/templates/: 404.html  base.html  wishlist.html
django_wishlist/views/: __init__.py  wishlist.py
django_wishlist/views/api/: __init__.py  collections.py  wishes.py
