[tool.poetry]
name = "django-wishlist"
version = "0.1.0"
description = "Simple wishlist with email feedback"
authors = ["Oleg Golibroda"]
readme = "README.md"
packages = [{include = "django_wishlist"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
dj-database-url = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
