[tool.poetry]
name = "django-wishlist"
version = "0.1.0"
description = "Simple wishlist with email feedback"
authors = ["Oleg Golibroda"]
readme = "README.md"
packages = [{include = "django_wishlist"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.16"
gunicorn = "*"
psycopg2-binary = "*"
dj-database-url = "*"
pillow = "*"
django-colorfield = "*"
boto3 = "^1.26.1"
django-storages = "^1.13.1"
django-ninja = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
